<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentPreguntas">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/tv_pregunta"
        android:layout_width="match_parent"
        android:layout_height="53dp" />

    <RadioGroup
        android:id="@+id/rg_trueFalse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_true"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:text="@string/text_true" />

        <RadioButton
            android:id="@+id/rb_false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_false" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prev"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_checkAns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_answer"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_currQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center" />

</LinearLayout>